--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "node-sass": "^3.7.0"
   },
   "scripts": {
-    "test:import-module": "node-sass --importer index.js -o ./tests/css/dist ./tests/css/import-module.scss",
+    "test:selectors": "node-sass --importer index.js -o ./tests/css/dist ./tests/css/selectors.scss",
+    "test:module": "node-sass --importer index.js -o ./tests/css/dist ./tests/css/module.scss",
     "test:globbing": "node-sass --importer index.js -o ./tests/css/dist ./tests/css/globbing.scss",
-    "test:import-once": "node-sass --importer index.js -o ./tests/css/dist ./tests/css/import-once.scss",
-    "test:import-selectors": "node-sass --importer index.js -o ./tests/css/dist ./tests/css/import-selectors.scss",
-    "test": "npm run test:import-module && npm run test:globbing && npm run test:import-once && npm run test:import-selectors"
+    "test:once": "node-sass --importer index.js -o ./tests/css/dist ./tests/css/once.scss",
+    "test": "npm run test:selectors && npm run test:module && npm run test:globbing && npm run test:once"
   }
 }
