--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "test:globbing": "node-sass --importer index.js -o ./tests/css/dist ./tests/css/globbing.scss",
     "test:once": "node-sass --importer index.js -o ./tests/css/dist ./tests/css/once.scss",
     "test:css": "node-sass --importer index.js -o ./tests/css/dist ./tests/css/css.scss",
-    "test": "npm run test:selectors && npm run test:module && npm run test:globbing && npm run test:once && npm run test:css"
+    "test:combined": "node-sass --importer index.js -o ./tests/css/dist ./tests/css/combined.scss",
+    "test": "npm run test:selectors && npm run test:module && npm run test:globbing && npm run test:once && npm run test:css && npm run test:combined"
   }
 }
