do not use "./" in paths, fixes #26

--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "node-sass": "^3.7.0"
   },
   "scripts": {
-    "test:selectors": "node-sass --importer index.js -o ./tests/css/dist ./tests/css/selectors.scss",
-    "test:module": "node-sass --importer index.js -o ./tests/css/dist ./tests/css/module.scss",
-    "test:globbing": "node-sass --importer index.js -o ./tests/css/dist ./tests/css/globbing.scss",
-    "test:once": "node-sass --importer index.js -o ./tests/css/dist ./tests/css/once.scss",
-    "test:css": "node-sass --importer index.js -o ./tests/css/dist ./tests/css/css.scss",
-    "test:combined": "node-sass --importer index.js -o ./tests/css/dist ./tests/css/combined.scss",
+    "test:selectors": "node-sass --importer index.js -o tests/css/dist tests/css/selectors.scss",
+    "test:module": "node-sass --importer index.js -o tests/css/dist tests/css/module.scss",
+    "test:globbing": "node-sass --importer index.js -o tests/css/dist tests/css/globbing.scss",
+    "test:once": "node-sass --importer index.js -o tests/css/dist tests/css/once.scss",
+    "test:css": "node-sass --importer index.js -o tests/css/dist tests/css/css.scss",
+    "test:combined": "node-sass --importer index.js -o tests/css/dist tests/css/combined.scss",
     "test": "npm run test:selectors && npm run test:module && npm run test:globbing && npm run test:once && npm run test:css && npm run test:combined"
   }
 }
