--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "node-sass-magic-importer",
   "description": "Custom node-sass importer for selector specific imports, module importing, globbing support, import files only once and importing of files with .css extension",
-  "main": "index.js",
   "version": "0.1.2",
   "author": "Markus Oberlehner",
   "homepage": "https://github.com/maoberlehner/node-sass-magic-importer",
@@ -20,15 +19,21 @@
   },
   "devDependencies": {
     "bootstrap": "^4.0.0-alpha.2",
-    "node-sass": "^3.7.0"
+    "node-sass": "^3.7.0",
+    "rollup": "^0.32.0",
+    "rollup-plugin-buble": "^0.11.0"
   },
+  "main": "dist/index.js",
+  "jsnext:main": "js/index.js",
   "scripts": {
-    "test:selectors": "node-sass --importer index.js -o tests/css/dist tests/css/selectors.scss",
-    "test:module": "node-sass --importer index.js -o tests/css/dist tests/css/module.scss",
-    "test:globbing": "node-sass --importer index.js -o tests/css/dist tests/css/globbing.scss",
-    "test:once": "node-sass --importer index.js -o tests/css/dist tests/css/once.scss",
-    "test:css": "node-sass --importer index.js -o tests/css/dist tests/css/css.scss",
-    "test:combined": "node-sass --importer index.js -o tests/css/dist tests/css/combined.scss",
+    "scripts:bundle": "rollup --config --format cjs --output dist/index.js js/index.js",
+    "scripts": "npm run scripts:bundle",
+    "test:selectors": "node-sass --importer dist/index.js -o tests/css/dist tests/css/selectors.scss",
+    "test:module": "node-sass --importer dist/index.js -o tests/css/dist tests/css/module.scss",
+    "test:globbing": "node-sass --importer dist/index.js -o tests/css/dist tests/css/globbing.scss",
+    "test:once": "node-sass --importer dist/index.js -o tests/css/dist tests/css/once.scss",
+    "test:css": "node-sass --importer dist/index.js -o tests/css/dist tests/css/css.scss",
+    "test:combined": "node-sass --importer dist/index.js -o tests/css/dist tests/css/combined.scss",
     "test": "npm run test:selectors && npm run test:module && npm run test:globbing && npm run test:once && npm run test:css && npm run test:combined"
   }
 }
