--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "bootstrap": "^4.0.0-alpha.2",
+    "jshint": "^2.9.2",
     "node-sass": "^3.7.0",
     "rollup": "^0.32.0",
     "rollup-plugin-buble": "^0.11.0"
@@ -27,7 +28,8 @@
   "jsnext:main": "js/index.js",
   "scripts": {
     "scripts:bundle": "rollup --config --format cjs --output dist/index.js js/index.js",
-    "scripts": "npm run scripts:bundle",
+    "scripts:lint": "jshint js/index.js || exit 0",
+    "scripts": "npm run scripts:bundle && npm run scripts:lint",
     "test:selectors": "node-sass --importer dist/index.js -o tests/css/dist tests/css/selectors.scss",
     "test:module": "node-sass --importer dist/index.js -o tests/css/dist tests/css/module.scss",
     "test:globbing": "node-sass --importer dist/index.js -o tests/css/dist tests/css/globbing.scss",
