--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "jshint": "^2.9.2",
     "node-sass": "^3.7.0",
     "rollup": "^0.32.0",
-    "rollup-plugin-buble": "^0.11.0"
+    "rollup-plugin-babel": "^2.5.1"
   },
   "main": "dist/index.js",
   "jsnext:main": "js/index.js",
