add jshint checks, fixes #32

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,4 +1,8 @@
 {
+  "curly": true,
   "esversion": 6,
-  "node": true
+  "node": true,
+  "undef": true,
+  "unused": "vars",
+  "varstmt": true
 }
