--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "devDependencies": {
     "bootstrap": "^4.0.0-alpha.2",
+    "chai": "^3.5.0",
     "jshint": "^2.9.2",
+    "mocha": "^2.5.3",
     "node-sass": "^3.8.0",
     "rollup": "^0.33.0",
     "rollup-plugin-buble": "^0.12.1"
@@ -31,12 +33,6 @@
     "scripts:bundle": "rollup --config --format cjs --output dist/index.js js/index.js",
     "scripts:lint": "jshint js/index.js || exit 0",
     "scripts": "npm run scripts:bundle && npm run scripts:lint",
-    "test:selectors": "node-sass --importer dist/index.js -o tests/css/dist tests/css/selectors.scss",
-    "test:module": "node-sass --importer dist/index.js -o tests/css/dist tests/css/module.scss",
-    "test:globbing": "node-sass --importer dist/index.js -o tests/css/dist tests/css/globbing.scss",
-    "test:once": "node-sass --importer dist/index.js -o tests/css/dist tests/css/once.scss",
-    "test:css": "node-sass --importer dist/index.js -o tests/css/dist tests/css/css.scss",
-    "test:combined": "node-sass --importer dist/index.js -o tests/css/dist tests/css/combined.scss",
-    "test": "npm run test:selectors && npm run test:module && npm run test:globbing && npm run test:once && npm run test:css && npm run test:combined"
+    "test": "mocha"
   }
 }
