--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "scripts:bundle": "rollup --config --format cjs --output dist/index.js js/index.js",
     "scripts:lint": "jshint js/index.js || exit 0",
     "scripts": "npm run scripts:bundle && npm run scripts:lint",
-    "test": "mocha"
+    "test": "npm run scripts && mocha"
   }
 }
