--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "css-selector-extract": "^0.3.1",
-    "glob": "^7.0.5"
+    "glob": "^7.0.5",
+    "unique-concat": "^0.2.2"
   },
   "devDependencies": {
     "bootstrap": "^4.0.0-alpha.2",
