--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jshint": "^2.9.2",
     "mocha": "^2.5.3",
     "node-sass": "^3.8.0",
+    "pre-git": "^3.10.0",
     "rollup": "^0.33.0",
     "rollup-plugin-buble": "^0.12.1"
   },
@@ -34,5 +35,15 @@
     "scripts:lint": "jshint js/index.js || exit 0",
     "scripts": "npm run scripts:bundle && npm run scripts:lint",
     "test": "mocha"
+  },
+  "config": {
+    "pre-git": {
+      "pre-commit": [
+        "npm run scripts:lint"
+      ],
+      "pre-push": [
+        "npm test"
+      ]
+    }
   }
 }
