--- a/packages/node-sass-selector-importer/package.json
+++ b/packages/node-sass-selector-importer/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "bootstrap": "4.0.0-alpha.3",
     "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "eslint": "^3.4.0",
     "eslint-config-modularis": "^0.2.0",
     "eslint-plugin-import": "^1.14.0",
