--- a/package.json
+++ b/package.json
@@ -12,27 +12,40 @@
   "bugs": {
     "url": "https://github.com/maoberlehner/node-sass-magic-importer/issues"
   },
-  "dependencies": {
-    "css-selector-extract": "^0.3.1",
-    "glob": "^7.0.5",
-    "unique-concat": "^0.2.2"
-  },
   "devDependencies": {
-    "bootstrap": "^4.0.0-alpha.2",
+    "bootstrap": "4.0.0-alpha.2",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
-    "jshint": "^2.9.2",
+    "eslint": "^3.1.1",
+    "eslint-config-modularis": "^0.2.0",
+    "eslint-plugin-import": "^1.12.0",
     "mocha": "^2.5.3",
     "node-sass": "^3.8.0",
-    "rollup": "^0.33.0",
+    "pre-git": "^3.10.0",
+    "rollup": "^0.34.1",
     "rollup-plugin-buble": "^0.12.1"
   },
   "main": "dist/index.js",
   "jsnext:main": "js/index.js",
   "scripts": {
+    "scripts:lint": "eslint js/* test/*",
     "scripts:bundle": "rollup --config --format cjs --output dist/index.js js/index.js",
-    "scripts:lint": "jshint js/index.js || exit 0",
-    "scripts": "npm run scripts:bundle && npm run scripts:lint",
-    "test": "npm run scripts && mocha"
+    "scripts": "npm run scripts:lint && npm run scripts:bundle",
+    "test": "mocha"
+  },
+  "config": {
+    "pre-git": {
+      "pre-commit": [
+        "npm run scripts:lint"
+      ],
+      "pre-push": [
+        "npm test"
+      ]
+    }
+  },
+  "dependencies": {
+    "node-sass-glob-importer": "^2.0.1",
+    "node-sass-package-importer": "^1.0.5",
+    "node-sass-selector-importer": "^0.1.2"
   }
 }
