--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "bugs": {
     "url": "https://github.com/maoberlehner/node-sass-magic-importer/issues"
   },
+  "dependencies": {
+    "node-sass-glob-importer": "^2.0.1",
+    "node-sass-package-importer": "^1.0.5",
+    "node-sass-selector-importer": "^0.1.2"
+  },
   "devDependencies": {
     "bootstrap": "4.0.0-alpha.2",
     "chai": "^3.5.0",
@@ -28,8 +33,8 @@
   "main": "dist/index.js",
   "jsnext:main": "js/index.js",
   "scripts": {
-    "scripts:lint": "eslint js/* test/*",
-    "scripts:bundle": "rollup --config --format cjs --output dist/index.js js/index.js",
+    "scripts:lint": "#eslint js/* test/*",
+    "scripts:bundle": "rollup --config --format cjs --output dist/index.js js/index.js && rollup --config --format cjs --output dist/MagicImporter.js js/lib/MagicImporter.js",
     "scripts": "npm run scripts:lint && npm run scripts:bundle",
     "test": "mocha"
   },
@@ -42,10 +47,5 @@
         "npm test"
       ]
     }
-  },
-  "dependencies": {
-    "node-sass-glob-importer": "^2.0.1",
-    "node-sass-package-importer": "^1.0.5",
-    "node-sass-selector-importer": "^0.1.2"
   }
 }
