--- a/packages/node-sass-selector-importer/package.json
+++ b/packages/node-sass-selector-importer/package.json
@@ -17,7 +17,8 @@
     "url": "https://github.com/maoberlehner/node-sass-selector-importer/issues"
   },
   "dependencies": {
-    "css-selector-extract": "^0.3.5"
+    "css-selector-extract": "^1.2.0",
+    "postcss-scss": "^0.3.0"
   },
   "devDependencies": {
     "bootstrap": "4.0.0-alpha.3",
