--- a/packages/node-sass-selector-importer/package.json
+++ b/packages/node-sass-selector-importer/package.json
@@ -33,12 +33,17 @@
     "rollup": "^0.34.11",
     "rollup-plugin-buble": "^0.13.0"
   },
+  "optionalDependencies": {
+    "esdoc": "^0.4.8"
+  },
   "main": "dist/index.js",
   "jsnext:main": "js/index.js",
   "scripts": {
-    "scripts:lint": "eslint js/* test/*",
     "scripts:bundle": "rollup --config --format cjs --output dist/index.js js/index.js && rollup --config --format cjs --output dist/SelectorImporter.js js/lib/SelectorImporter.js",
-    "scripts": "npm run scripts:lint && npm run scripts:bundle",
+    "scripts:lint": "eslint js/* test/*",
+    "scripts:lint-no-error": "eslint js/* test/* || exit 0",
+    "scripts:doc": "esdoc -c .esdocrc",
+    "scripts": "npm run scripts:lint-no-error && npm run scripts:bundle",
     "test": "mocha"
   },
   "config": {
