--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   },
   "dependencies": {
     "node-sass-glob-importer": "^2.0.1",
-    "node-sass-package-importer": "^1.0.5",
-    "node-sass-selector-importer": "^0.2.1"
+    "node-sass-package-importer": "^1.0.6",
+    "node-sass-selector-importer": "^1.0.1",
+    "unique-concat": "^0.2.2"
   },
   "devDependencies": {
     "bootstrap": "4.0.0-alpha.2",
@@ -24,6 +25,7 @@
     "eslint": "^3.1.1",
     "eslint-config-modularis": "^0.2.0",
     "eslint-plugin-import": "^1.12.0",
+    "foundation-sites": "^6.2.3",
     "mocha": "^2.5.3",
     "node-sass": "^3.8.0",
     "pre-git": "^3.10.0",
