--- a/package.json
+++ b/package.json
@@ -32,12 +32,17 @@
     "rollup": "^0.34.1",
     "rollup-plugin-buble": "^0.12.1"
   },
+  "optionalDependencies": {
+    "esdoc": "^0.4.8"
+  },
   "main": "dist/index.js",
   "jsnext:main": "js/index.js",
   "scripts": {
-    "scripts:lint": "#eslint js/* test/*",
     "scripts:bundle": "rollup --config --format cjs --output dist/index.js js/index.js && rollup --config --format cjs --output dist/MagicImporter.js js/lib/MagicImporter.js",
-    "scripts": "npm run scripts:lint && npm run scripts:bundle",
+    "scripts:lint": "eslint js/* test/*",
+    "scripts:lint-no-error": "eslint js/* test/* || exit 0",
+    "scripts:doc": "esdoc -c .esdocrc",
+    "scripts": "npm run scripts:lint-no-error && npm run scripts:bundle",
     "test": "mocha"
   },
   "config": {
