--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
   "main": "dist/index.js",
   "jsnext:main": "js/index.js",
   "scripts": {
+    "scripts:bundle": "rollup --config --format cjs --output dist/index.js js/index.js && rollup --config --format cjs --output dist/MagicImporter.js js/lib/MagicImporter.js",
     "scripts:lint": "eslint js/* test/*",
     "scripts:lint-no-error": "eslint js/* test/* || exit 0",
-    "scripts:bundle": "rollup --config --format cjs --output dist/index.js js/index.js && rollup --config --format cjs --output dist/MagicImporter.js js/lib/MagicImporter.js",
     "scripts:doc": "esdoc -c .esdocrc",
-    "scripts": "npm run scripts:lint-no-error && npm run scripts:bundle",
+    "scripts": "npm run scripts:bundle && npm run scripts:lint-no-error",
     "test": "mocha"
   },
   "config": {
