--- a/packages/node-sass-glob-importer/package.json
+++ b/packages/node-sass-glob-importer/package.json
@@ -35,9 +35,10 @@
   "main": "dist/index.js",
   "jsnext:main": "js/index.js",
   "scripts": {
-    "scripts:lint": "eslint js/* test/*",
     "scripts:bundle": "rollup --config --format cjs --output dist/index.js js/index.js && rollup --config --format cjs --output dist/GlobImporter.js js/lib/GlobImporter.js",
-    "scripts": "npm run scripts:lint && npm run scripts:bundle",
+    "scripts:lint": "eslint js/* test/*",
+    "scripts:lint-no-error": "eslint js/* test/* || exit 0",
+    "scripts": "npm run scripts:bundle && npm run scripts:lint-no-error",
     "test": "mocha"
   },
   "config": {
