Optimize npm scripts

--- a/packages/node-sass-selector-importer/package.json
+++ b/packages/node-sass-selector-importer/package.json
@@ -43,7 +43,7 @@
     "scripts:lint": "eslint js/* test/*",
     "scripts:lint-no-error": "eslint js/* test/* || exit 0",
     "scripts:doc": "esdoc -c .esdocrc",
-    "scripts": "npm run scripts:lint-no-error && npm run scripts:bundle",
+    "scripts": "npm run scripts:bundle && npm run scripts:lint-no-error",
     "test": "mocha"
   },
   "config": {
