--- a/packages/node-sass-glob-importer/package.json
+++ b/packages/node-sass-glob-importer/package.json
@@ -32,12 +32,16 @@
     "rollup": "^0.34.1",
     "rollup-plugin-buble": "^0.12.1"
   },
+  "optionalDependencies": {
+    "esdoc": "^0.4.8"
+  },
   "main": "dist/index.js",
   "jsnext:main": "js/index.js",
   "scripts": {
     "scripts:bundle": "rollup --config --format cjs --output dist/index.js js/index.js && rollup --config --format cjs --output dist/GlobImporter.js js/lib/GlobImporter.js",
     "scripts:lint": "eslint js/* test/*",
     "scripts:lint-no-error": "eslint js/* test/* || exit 0",
+    "scripts:doc": "esdoc -c .esdocrc",
     "scripts": "npm run scripts:bundle && npm run scripts:lint-no-error",
     "test": "mocha"
   },
