--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
   "name": "node-sass-magic-importer",
   "description": "Custom node-sass importer for selector specific imports, module importing, globbing support, import files only once and importing of files with .css extension",
+  "keywords": [
+    "node-sass",
+    "sass",
+    "importer",
+    "glob-importer",
+    "package-importer",
+    "module-importer",
+    "selector-importer"
+  ],
   "version": "1.1.2",
   "author": "Markus Oberlehner",
   "homepage": "https://github.com/maoberlehner/node-sass-magic-importer",
