--- a/packages/node-sass-glob-importer/package.json
+++ b/packages/node-sass-glob-importer/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
+    "esdoc": "^0.4.8",
     "eslint": "^3.6.0",
     "eslint-config-modularis": "^1.0.0",
     "eslint-plugin-import": "^1.16.0",
@@ -33,9 +34,6 @@
     "pre-git": "^3.10.0",
     "rollup": "^0.36.0",
     "rollup-plugin-buble": "^0.14.0"
-  },
-  "optionalDependencies": {
-    "esdoc": "^0.4.8"
   },
   "main": "dist/index.js",
   "jsnext:main": "js/index.js",
