--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "unique-concat": "^0.2.2"
   },
   "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-preset-es2015": "^6.18.0",
     "bootstrap": "4.0.0-alpha.3",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
@@ -43,7 +45,7 @@
     "node-sass": "^3.13.0",
     "pre-git": "^3.11.1",
     "rollup": "^0.36.3",
-    "rollup-plugin-buble": "^0.14.0"
+    "rollup-plugin-babel": "^2.7.1"
   },
   "main": "dist/index.js",
   "jsnext:main": "js/index.js",
