Split tests into multiple files and simplify the tests. Use babel to test es6 source files directly.

--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "babel-preset-es2015": "^6.18.0",
     "bootstrap": "4.0.0-alpha.6",
     "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
     "esdoc": "^0.5.2",
     "eslint": "^3.13.1",
     "eslint-config-modularis": "^4.0.0",
@@ -55,7 +54,10 @@
     "scripts:lint-no-error": "eslint js/* test/* || exit 0",
     "scripts:doc": "esdoc -c .esdocrc",
     "scripts": "npm run scripts:bundle && npm run scripts:lint-no-error",
-    "test": "mocha"
+    "test:lib": "mocha test/lib/*.test.js --compilers js:babel-core/register",
+    "test:index": "mocha test/index.test.js --compilers js:babel-core/register",
+    "test:cli": "npm run scripts:bundle && mocha test/cli.test.js --compilers js:babel-core/register",
+    "test": "npm run scripts:bundle && mocha test/* --compilers js:babel-core/register"
   },
   "config": {
     "pre-git": {
