--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "node-sass": "^4.3.0",
     "pre-git": "^3.12.0",
     "rollup": "^0.41.3",
-    "rollup-plugin-babel": "^2.7.1"
+    "rollup-plugin-babel": "^2.7.1",
+    "sinon": "^1.17.7"
   },
   "main": "dist/index.js",
   "jsnext:main": "js/index.js",
