--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-sass-magic-importer",
-  "description": "Custom node-sass importer for selector specific imports, module importing, globbing support, import files only once and importing of files with .css extension",
+  "description": "Custom node-sass importer for selector specific imports, node importing, module importing, globbing support and importing files only once",
   "keywords": [
     "glob-importer",
     "importer",
