--- a/package.json
+++ b/package.json
@@ -32,16 +32,15 @@
     "unique-concat": "^0.2.2"
   },
   "devDependencies": {
+    "ava": "^0.18.1",
     "babel-core": "^6.21.0",
     "babel-preset-es2015": "^6.18.0",
     "bootstrap": "4.0.0-alpha.6",
-    "chai": "^3.5.0",
     "esdoc": "^0.5.2",
     "eslint": "^3.13.1",
     "eslint-config-modularis": "^4.0.0",
     "eslint-plugin-import": "^2.2.0",
     "foundation-sites": "^6.3.0",
-    "mocha": "^3.2.0",
     "node-sass": "^4.3.0",
     "pre-git": "^3.12.0",
     "rollup": "^0.41.3",
@@ -56,10 +55,7 @@
     "scripts:lint-no-error": "eslint js/* test/* || exit 0",
     "scripts:doc": "esdoc -c .esdocrc",
     "scripts": "npm run scripts:bundle && npm run scripts:lint-no-error",
-    "test:lib": "mocha test/lib/*.test.js --compilers js:babel-core/register",
-    "test:index": "mocha test/index.test.js --compilers js:babel-core/register",
-    "test:cli": "npm run scripts:bundle && mocha test/cli.test.js --compilers js:babel-core/register",
-    "test": "npm run scripts:bundle && mocha test/* --compilers js:babel-core/register"
+    "test": "ava"
   },
   "config": {
     "pre-git": {
