Configure ava and babel.

--- a/package.json
+++ b/package.json
@@ -66,5 +66,11 @@
         "npm test"
       ]
     }
+  },
+  "ava": {
+    "babel": "inherit",
+    "require": [
+      "babel-register"
+    ]
   }
 }
