--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
   "devDependencies": {
     "ava": "^0.18.1",
     "babel-core": "^6.21.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.22.0",
     "bootstrap": "4.0.0-alpha.6",
     "esdoc": "^0.5.2",
     "eslint": "^3.13.1",
