--- a/package.json
+++ b/package.json
@@ -21,58 +21,25 @@
   "bugs": {
     "url": "https://github.com/maoberlehner/node-sass-magic-importer/issues"
   },
-  "dependencies": {
-    "css-node-extract": "^0.2.1",
-    "glob": "^7.1.1",
-    "node-sass-filter-importer": "^1.0.1",
-    "node-sass-glob-importer": "^3.0.2",
-    "node-sass-package-importer": "^3.0.4",
-    "node-sass-selector-importer": "^4.2.0",
-    "postcss-scss": "^0.4.0",
-    "unique-concat": "^0.2.2"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "ava": "^0.18.1",
-    "babel-core": "^6.21.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "bootstrap": "4.0.0-alpha.6",
-    "esdoc": "^0.5.2",
-    "eslint": "^3.13.1",
-    "eslint-config-modularis": "^4.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "foundation-sites": "^6.3.0",
-    "node-sass": "^4.5.0",
-    "pre-git": "^3.12.0",
-    "rollup": "^0.41.3",
-    "rollup-plugin-babel": "^2.7.1",
-    "sinon": "^1.17.7"
+    "@types/glob": "^5.0.30",
+    "@types/node": "^7.0.12",
+    "@types/sinon": "^2.1.2",
+    "ava": "^0.19.0",
+    "node-sass": "^4.5.2",
+    "rimraf": "^2.6.1",
+    "sinon": "^2.1.0",
+    "tslint": "^5.0.0",
+    "typescript": "^2.2.2"
   },
   "main": "dist/index.js",
-  "jsnext:main": "js/index.js",
   "scripts": {
-    "scripts:bundle": "rm -R dist && rollup --config --format cjs --output dist/cli.js js/cli.js && rollup --config --format cjs --output dist/index.js js/index.js && rollup --config --format cjs --output dist/lib/default-options.js js/lib/default-options.js && rollup --config --format cjs --output dist/lib/magic-importer.js js/lib/magic-importer.js",
-    "scripts:lint": "eslint js/* test/*",
-    "scripts:lint-no-error": "eslint js/* test/* || exit 0",
-    "scripts:doc": "esdoc -c .esdocrc",
-    "scripts": "npm run scripts:bundle && npm run scripts:lint-no-error",
-    "test": "ava"
-  },
-  "config": {
-    "pre-git": {
-      "pre-commit": [
-        "npm run scripts:lint"
-      ],
-      "pre-push": [
-        "npm test"
-      ]
-    }
-  },
-  "ava": {
-    "babel": "inherit",
-    "require": [
-      "babel-register"
-    ]
+    "start": "yarn run watch",
+    "watch": "yarn run clean && tsc -w",
+    "build": "yarn run clean && tsc",
+    "clean": "rimraf dist",
+    "lint": "tslint 'src/**/*.ts'",
+    "test": "yarn run build && ava dist/**/*.spec.js test/**/*.test.js"
   }
 }
