--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/sinon": "^2.1.2",
     "ava": "^0.19.0",
     "node-sass": "^4.5.2",
+    "nyc": "^10.2.0",
     "rimraf": "^2.6.1",
     "sinon": "^2.1.0",
     "tslint": "^5.0.0",
@@ -43,6 +44,7 @@
     "build": "yarn run clean && tsc",
     "clean": "rimraf dist",
     "lint": "tslint 'src/**/*.ts'",
-    "test": "yarn run build && ava dist/**/*.spec.js test/**/*.test.js"
+    "test": "yarn run build && ava dist/**/*.spec.js test/**/*.test.js",
+    "coverage": "yarn run build && nyc ava dist/**/*.spec.js"
   }
 }
