--- a/config/tsconfig.base.json
+++ b/config/tsconfig.base.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es2015",
+    "declaration": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "sourceMap": true
