--- a/packages/node-sass-selector-importer/package.json
+++ b/packages/node-sass-selector-importer/package.json
@@ -7,54 +7,30 @@
     "sass",
     "selector-importer"
   ],
-  "version": "4.2.1",
+  "version": "5.0.0",
   "author": "Markus Oberlehner",
-  "homepage": "https://github.com/maoberlehner/node-sass-selector-importer",
+  "homepage": "https://github.com/maoberlehner/node-sass-magic-importer/tree/master/packages/node-sass-selector-importer",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/maoberlehner/node-sass-selector-importer"
+    "url": "https://github.com/maoberlehner/node-sass-magic-importer"
   },
   "bugs": {
-    "url": "https://github.com/maoberlehner/node-sass-selector-importer/issues"
+    "url": "https://github.com/maoberlehner/node-sass-magic-importer/issues"
   },
   "dependencies": {
-    "css-selector-extract": "^2.0.1",
-    "node-sass": "^3.13.0",
-    "postcss-scss": "^0.3.1"
+    "node-sass-magic-importer": "^5.0.0"
   },
   "devDependencies": {
-    "bootstrap": "4.0.0-alpha.3",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
-    "esdoc": "^0.4.8",
-    "eslint": "^3.8.1",
-    "eslint-config-modularis": "^2.0.0",
-    "eslint-plugin-import": "^2.0.1",
-    "mocha": "^3.1.2",
-    "node-sass": "^3.13.0",
-    "pre-git": "^3.10.0",
-    "rollup": "^0.36.3",
-    "rollup-plugin-buble": "^0.14.0"
+    "@types/node": "^8.0.5",
+    "rimraf": "^2.6.1",
+    "typescript": "^2.4.1"
   },
   "main": "dist/index.js",
-  "jsnext:main": "js/index.js",
   "scripts": {
-    "scripts:bundle": "rollup --config --format cjs --output dist/index.js js/index.js && rollup --config --format cjs --output dist/cli.js js/cli.js && rollup --config --format cjs --output dist/SelectorImporter.js js/lib/SelectorImporter.js",
-    "scripts:lint": "eslint js/* test/*",
-    "scripts:lint-no-error": "eslint js/* test/* || exit 0",
-    "scripts:doc": "esdoc -c .esdocrc",
-    "scripts": "npm run scripts:bundle && npm run scripts:lint-no-error",
-    "test": "mocha"
-  },
-  "config": {
-    "pre-git": {
-      "pre-commit": [
-        "npm run scripts:lint"
-      ],
-      "pre-push": [
-        "npm test"
-      ]
-    }
+    "build": "npm run clean && tsc",
+    "watch": "npm run clean && tsc -w",
+    "clean": "rimraf dist",
+    "prepublishOnly": "npm run build"
   }
 }
