--- a/packages/node-sass-magic-importer/package.json
+++ b/packages/node-sass-magic-importer/package.json
@@ -21,15 +21,18 @@
   "bugs": {
     "url": "https://github.com/maoberlehner/node-sass-magic-importer/issues"
   },
-  "dependencies": {},
-  "devDependencies": {
-    "@types/glob": "^5.0.30",
-    "@types/node": "^8.0.5",
-    "@types/sinon": "^2.3.2",
-    "ava": "^0.20.0",
+  "dependencies": {
     "css-node-extract": "^1.0.0",
     "css-selector-extract": "^3.0.1",
     "postcss-scss": "^1.0.2",
+    "resolve": "^1.3.3"
+  },
+  "devDependencies": {
+    "@types/glob": "^5.0.30",
+    "@types/node": "^8.0.5",
+    "@types/resolve": "0.0.4",
+    "@types/sinon": "^2.3.2",
+    "ava": "^0.20.0",
     "rimraf": "^2.6.1",
     "sinon": "^2.3.5",
     "typescript": "^2.4.1"
@@ -39,6 +42,7 @@
     "build": "npm run clean && tsc",
     "watch": "npm run clean && tsc -w",
     "clean": "rimraf dist",
-    "test": "npm run build && ava dist/**/*.spec.js"
+    "test": "npm run build && ava dist/**/*.spec.js",
+    "prepublishOnly": "npm run build"
   }
 }
