Filter importer TypeScript rewrite

--- a/packages/node-sass-filter-importer/.npmignore
+++ b/packages/node-sass-filter-importer/.npmignore
@@ -1,13 +1,3 @@
-.babelrc
-.editorconfig
-.esdocrc
-.eslintrc
-.gitattributes
-.travis.yml
+tsconfig.json
 
-CHANGELOG.md
-CONTRIBUTING.md
-rollup.config.js
-yarn.lock
-
-test
+src
