--- a/packages/node-sass-filter-importer/package.json
+++ b/packages/node-sass-filter-importer/package.json
@@ -7,57 +7,30 @@
     "sass",
     "filter-importer"
   ],
-  "version": "1.0.1",
+  "version": "5.0.0",
   "author": "Markus Oberlehner",
-  "homepage": "https://github.com/maoberlehner/node-sass-filter-importer",
+  "homepage": "https://github.com/maoberlehner/node-sass-magic-importer/tree/master/packages/node-sass-filter-importer",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/maoberlehner/node-sass-filter-importer"
+    "url": "https://github.com/maoberlehner/node-sass-magic-importer"
   },
   "bugs": {
-    "url": "https://github.com/maoberlehner/node-sass-filter-importer/issues"
+    "url": "https://github.com/maoberlehner/node-sass-magic-importer/issues"
   },
   "dependencies": {
-    "css-node-extract": "^0.1.0",
-    "postcss-scss": "^0.4.0",
-    "unique-concat": "^0.2.2"
+    "node-sass-magic-importer": "^5.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-preset-es2015": "^6.18.0",
-    "chai": "^3.5.0",
-    "esdoc": "^0.5.2",
-    "eslint": "^3.12.2",
-    "eslint-config-modularis": "^4.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "mocha": "^3.2.0",
-    "node-sass": "^4.1.1",
-    "pre-git": "^3.12.0",
-    "rollup": "^0.40.0",
-    "rollup-plugin-babel": "^2.7.1"
+    "@types/node": "^8.0.5",
+    "rimraf": "^2.6.1",
+    "typescript": "^2.4.1"
   },
   "main": "dist/index.js",
-  "jsnext:main": "js/index.js",
   "scripts": {
-    "scripts:bundle": "rm -R dist && rollup --config --format cjs --output dist/cli.js js/cli.js && rollup --config --format cjs --output dist/index.js js/index.js && rollup --config --format cjs --output dist/lib/clean-import-url.js js/lib/clean-import-url.js && rollup --config --format cjs --output dist/lib/default-options.js js/lib/default-options.js && rollup --config --format cjs --output dist/lib/extract-import-filters.js js/lib/extract-import-filters.js && rollup --config --format cjs --output dist/lib/filter-importer.js js/lib/filter-importer.js",
-    "scripts:lint": "eslint js/* test/*",
-    "scripts:lint-no-error": "eslint js/* test/* || exit 0",
-    "scripts:doc": "esdoc -c .esdocrc",
-    "scripts": "npm run scripts:bundle && npm run scripts:lint-no-error",
-    "test:lib": "mocha test/lib/*.test.js --compilers js:babel-core/register",
-    "test:index": "mocha test/index.test.js --compilers js:babel-core/register",
-    "test:cli": "npm run scripts:bundle && mocha test/cli.test.js --compilers js:babel-core/register",
-    "test": "npm run scripts:bundle && mocha test/* --compilers js:babel-core/register"
-  },
-  "config": {
-    "pre-git": {
-      "pre-commit": [
-        "npm run scripts:lint"
-      ],
-      "pre-push": [
-        "npm test"
-      ]
-    }
+    "build": "npm run clean && tsc",
+    "watch": "npm run clean && tsc -w",
+    "clean": "rimraf dist",
+    "prepublishOnly": "npm run build"
   }
 }
