--- a/packages/node-sass-glob-importer/package.json
+++ b/packages/node-sass-glob-importer/package.json
@@ -7,52 +7,29 @@
     "node-sass",
     "sass"
   ],
-  "version": "3.0.2",
+  "version": "5.0.0",
   "author": "Markus Oberlehner",
-  "homepage": "https://github.com/maoberlehner/node-sass-glob-importer",
+  "homepage": "https://github.com/maoberlehner/node-sass-magic-importer/tree/master/packages/node-sass-glob-importer",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/maoberlehner/node-sass-glob-importer"
+    "url": "https://github.com/maoberlehner/node-sass-magic-importer"
   },
   "bugs": {
-    "url": "https://github.com/maoberlehner/node-sass-glob-importer/issues"
+    "url": "https://github.com/maoberlehner/node-sass-magic-importer/issues"
   },
   "dependencies": {
-    "glob": "^7.1.1",
-    "unique-concat": "^0.2.2"
+    "node-sass-magic-importer": "^5.0.0"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
-    "esdoc": "^0.5.2",
-    "eslint": "^3.13.1",
-    "eslint-config-modularis": "^2.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "mocha": "^3.2.0",
-    "node-sass": "^4.12.0",
-    "pre-git": "^3.12.0",
-    "rollup": "^0.41.1",
-    "rollup-plugin-buble": "^0.15.0"
+    "rimraf": "^2.6.1",
+    "typescript": "^2.4.1"
   },
   "main": "dist/index.js",
-  "jsnext:main": "js/index.js",
   "scripts": {
-    "scripts:bundle": "rollup --config --format cjs --output dist/index.js js/index.js && rollup --config --format cjs --output dist/cli.js js/cli.js && rollup --config --format cjs --output dist/GlobImporter.js js/lib/GlobImporter.js",
-    "scripts:lint": "eslint js/* test/*",
-    "scripts:lint-no-error": "eslint js/* test/* || exit 0",
-    "scripts:doc": "esdoc -c .esdocrc",
-    "scripts": "npm run scripts:bundle && npm run scripts:lint-no-error",
-    "test": "mocha"
-  },
-  "config": {
-    "pre-git": {
-      "pre-commit": [
-        "npm run scripts:lint"
-      ],
-      "pre-push": [
-        "npm test"
-      ]
-    }
+    "build": "npm run clean && tsc",
+    "watch": "npm run clean && tsc -w",
+    "clean": "rimraf dist",
+    "prepublishOnly": "npm run build"
   }
 }
