--- a/packages/node-sass-once-importer/package.json
+++ b/packages/node-sass-once-importer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-sass-once-importer",
-  "description": "Import files only once",
+  "description": "Custom importer for node-sass to import files only once",
   "keywords": [
     "importer",
     "node-sass",
