--- a/packages/node-sass-selector-importer/package.json
+++ b/packages/node-sass-selector-importer/package.json
@@ -31,6 +31,7 @@
     "build": "npm run clean && tsc",
     "watch": "npm run clean && tsc -w",
     "clean": "rimraf dist",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "test": "true"
   }
 }
