Specify minimum required node and npm versions
Fixes #117

--- a/packages/node-sass-magic-importer/package.json
+++ b/packages/node-sass-magic-importer/package.json
@@ -39,6 +39,10 @@
     "typescript": "^2.4.1"
   },
   "main": "dist/index.js",
+  "engines": {
+    "node": ">=6.11.1",
+    "npm": ">=3.0.0"
+  },
   "scripts": {
     "build": "npm run clean && tsc",
     "watch": "npm run clean && tsc -w",
