--- a/packages/node-sass-magic-importer/package.json
+++ b/packages/node-sass-magic-importer/package.json
@@ -25,6 +25,7 @@
     "css-node-extract": "^1.0.0",
     "css-selector-extract": "^3.0.1",
     "get-installed-path": "^2.0.3",
+    "object-hash": "^1.1.8",
     "postcss-scss": "^1.0.2",
     "resolve": "^1.3.3"
   },
