--- a/packages/node-sass-once-importer/package.json
+++ b/packages/node-sass-once-importer/package.json
@@ -7,7 +7,7 @@
     "sass",
     "once-importer"
   ],
-  "version": "5.0.0",
+  "version": "5.0.0-alpha.1",
   "author": "Markus Oberlehner",
   "homepage": "https://github.com/maoberlehner/node-sass-magic-importer/tree/master/packages/node-sass-once-importer",
   "license": "MIT",
@@ -19,7 +19,7 @@
     "url": "https://github.com/maoberlehner/node-sass-magic-importer/issues"
   },
   "dependencies": {
-    "node-sass-magic-importer": "^5.0.0"
+    "node-sass-magic-importer": "^5.0.0-alpha.1"
   },
   "devDependencies": {
     "@types/node": "^8.0.19",
