--- a/packages/node-sass-glob-importer/package.json
+++ b/packages/node-sass-glob-importer/package.json
@@ -26,6 +26,7 @@
     "typescript": "^2.4.2"
   },
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "engines": {
     "node": ">=6.11.1",
     "npm": ">=3.0.0"
