--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@avalanche/component-button": "^4.0.0-alpha.6",
     "@avalanche/object-grid": "^4.0.0-alpha.13",
     "ava": "^0.21.0",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.0.0-beta",
     "lerna": "^2.0.0",
     "node-sass": "^4.5.3",
     "tslint": "^5.5.0",
