Add script to easily update package dependencies
Also update dependencies.

Fixes #143

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^4.0.0-beta",
     "lerna": "^2.2.0",
     "node-sass": "^4.5.3",
+    "npm-check-updates": "^2.12.1",
     "tslint": "^5.7.0",
     "typescript": "^2.5.2"
   },
