Add publishing script
Fixes #144

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "scripts": {
     "bootstrap": "lerna bootstrap",
+    "publish": "lerna publish",
     "start": "npm run watch",
     "watch": "lerna run watch",
     "build": "lerna run build",
