Wrap glob string to prevent problems with nested dirs

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "lerna run build",
     "clean": "lerna run clean",
     "lint": "tslint packages/**/*.ts -e **/node_modules/** -e **/dist/**",
-    "test": "lerna run test && ava test/**/*.test.js"
+    "test": "lerna run test && ava 'test/**/*.test.js'"
   },
   "private": true,
   "repository": {
