Optimize coverage reports
- Source map support for correct line numbers
- Ignore dist files when

--- a/package.json
+++ b/package.json
@@ -37,13 +37,18 @@
     "typescript": "^2.5.3"
   },
   "jest": {
+    "coveragePathIgnorePatterns": [
+      "/dist/",
+      "/node_modules/"
+    ],
     "moduleFileExtensions": [
       "ts",
       "js"
     ],
     "transform": {
-      "^.+\\.ts$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+      "^.+\\.ts$": "ts-jest"
     },
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(js|ts)$"
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(js|ts)$",
+    "mapCoverage": true
   }
 }
