Limit max workers in coverage script directly
Because specifying it in the travis config file does not work.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "lerna run build",
     "clean": "lerna run clean",
     "lint": "tslint **/*.ts -e **/node_modules/** -e **/dist/**",
-    "coverage": "jest --coverage",
+    "coverage": "jest --coverage --maxWorkers=4",
     "coveralls": "npm run coverage && cat coverage/lcov.info | coveralls",
     "test": "jest"
   },
