--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ script:
   - npm run lint
   - npm run build
   - npm run test -- --maxWorkers=4
-  - npm run coveralls -- --maxWorkers=4
+  - npm run coveralls
